# Snake-Game

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  SnakeGame.sln  SnakeGame.vcxproj  SnakeGame.vcxproj.filters  Source-Code.cpp  ansi_escapes.h  asset_manager.cpp  asset_manager.hpp  game.cpp  game.hpp  game_over.cpp  game_over.hpp  game_pause.cpp  game_pause.hpp  game_play.cpp  game_play.hpp  main.cpp  main_menu.cpp  main_menu.hpp  snake.cpp  snake.hpp  state.hpp  state_manager.cpp  state_manager.hpp
include/: asset_manager.hpp  button.hpp  constants.hpp  game.hpp  game_context.hpp  game_over.hpp  game_pause.hpp  game_play.hpp  main_menu.hpp  render_manager.hpp  snake.hpp  snake_game.hpp  state.hpp  state_manager.hpp  text.hpp  text_renderer.hpp  window.hpp  window_manager.hpp
lib/: ansi_escapes.h
src/: asset_manager.cpp  button.cpp  game.cpp  game_context.cpp  game_over.cpp  game_pause.cpp  game_play.cpp  main.cpp  main_menu.cpp  render_manager.cpp  snake.cpp  snake_game.cpp  state_manager.cpp  text.cpp  text_renderer.cpp  window_manager.cpp
